gitops/apps/serving-demo/knative-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: parksmap
spec:
  template:
    spec:
      containerConcurrency: 1
      containers:
        - image: 'quay.io/openshiftroadshow/parksmap:latest'
          name: parksmap
          ports:
            - containerPort: 8080
              protocol: TCP
  traffic:
    - latestRevision: true
      percent: 100
