gitops/apps/serving-demo/knative-services.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: parksmap
spec:
  template:
    spec:
      containerConcurrency: 1
      containers:
        - image: 'quay.io/openshiftroadshow/parksmap:latest'
          name: parksmap
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 400m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
  traffic:
    - latestRevision: true
      percent: 100
