gitops/apps/serving-demo/knative-route.yaml
apiVersion: serving.knative.dev/v1
kind: Route
metadata:
  name: parksmap
spec:
  traffic:
    - configurationName: parksmap
      latestRevision: true
      percent: 100
